fix : over all push my changes in designs

--- a/Bakery-app/src/sass/index.scss
+++ b/Bakery-app/src/sass/index.scss
@@ -6,3 +6,10 @@
 @import './components/button/Button.scss';
 @import './components/text/Text.scss';
 @import './components/auth/Signup.scss';
+@import './components/commoncss/Commoncss.scss';
+@import './components/Protected.scss';
+@import './components/MoneyOut.scss';
+@import './components/UiLayout.scss';
+@import './components/commoncss/InputSearchbox.scss';
+@import './components/Table.scss';
+
