--- a/Bakery-app/src/sass/components/button/Button.scss
+++ b/Bakery-app/src/sass/components/button/Button.scss
@@ -1,14 +1,55 @@
-@import '../../media';
+@import "../../media";
 
 .login-btn {
-    width: 100%;
-    padding: 10px 0px;
-    cursor: pointer;
-    background-color: #1ba672;
-    color: white;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    font-weight: 500;
+  width: 100%;
+  padding: 10px 0px;
+  cursor: pointer;
+  background-color: #1ba672;
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+}
 
+.loader {
+  width: 100%;
+  padding: 10px 0px;
+  cursor: pointer;
+  background-color: #1ba672;
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.addproduct {
+  width: 100%;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #1ba672;
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+}
+
+
+.add-product-btn
+{
+  width: auto;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #1ba672;
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
 }
