--- a/Bakery-app/src/sass/components/forms/Form.scss
+++ b/Bakery-app/src/sass/components/forms/Form.scss
@@ -29,3 +29,14 @@ label{
 {
     cursor: pointer;
 }
+
+select {
+    width: 100%;
+    padding: 11px 10px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
